--- a/index.html
+++ b/index.html
@@ -1,3 +1,26 @@
-<h1>Este es un sitio web con Github Pages</h1>
-<p>Y fue creado con amor para el Curso de Git y Github de Platzi</p>
-<p><img src="https://i.imgur.com/PfA0M2o.gif" /></p>
+<html>
+    <head>
+        <title>Hyperblog 2.0 es un blog del futuro</title>
+        <link rel="stylesheet" href="apariencia.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                <img id="logo" src="imagenes/dragon.jpg" />
+                Hyperblog
+                <span id="tagline">sexooo?</span>
+            </div>
+            <div id="post">
+                <h1>huevin retraso o tonto?</h1>
+                <p>1991 25 de dicienbre, se desintrega oficualmente la urss </p>
+                <p><img src="huevin.jpg" width="100%" /></p>
+                <p>huevin es una especi humanoide del planeta tierra, en el sistema solar, su planeta de origin esta 152 millones de kilometros de una roca con un diametro de 12 kilometros llamada la tierra, un lugar ectraño donde los pelones son bien vidstos</p>
+                <p>Suscribete y dale like</p>
+            </div>
+	    <div id="footer">
+		Hecho con amor en trapitoland &lt;3
+	    </div>
+        </div>
+    </body>
+    <a href="https://imgur.com/a/0zTbaTI"><img src="https://i.imgur.com/a/0zTbaTI" width="100%" title="descripcion de la imagen" /></a>
+</html>
